--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,7 +18,10 @@
 
     .links {
       .flex-wrap-center();
-      width: 66%;
+      width: 70%;
+      @media @phone {
+        width: 100%;
+      }
       padding-top: 25px;
 
       a {
